--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,33 @@ spec/reports
 test/tmp
 test/version_tmp
 tmp
+# Standard
+*~
+# Standard Rails project
+/tmp/
+/log/
+/db/*.sqlite3
+# SASS CSS generation
+/public/stylesheets/.sass-cache/
+# Netbeans
+/nbproject/
+# Sublime Text 2 project
+*.sublime-project
+*.sublime-workspace
+*(copie)*
+# RVM
+.rvmrc
+# VisualRuby
+.vr_settings.yaml
+# Emacs
+*# 
+*\# 
+\#*
+.#*
+\#*\#
+# Geany
+*.geany
+# RubyMine
+.idea
+#RedCar
+.redcar
